
1.62
-----------------
Fixed the dependencies for copyM7Hp and registerM7Hp
-------------------------------------------


1.61
-----------------
Fix bug that prevented registration of LCI data. [LONE-90@JIRA]
Use MootSvc.ExitOnFatal="true"; when digitizing real data.
Use makeFT1_kluge and Pass6_kluge_Classifier. [LONE-91@JIRA]
Use a private copy of calibGenTkr to go with calibTkrUtil.
-------------------------------------------


1.60
-----------------
Use a link to point to AlarmsCfg (LONE-88).
Use error merger provided by FastMon instead of our own (LONE-70).
Run alarms on merit histograms and trending (LONE-87).
Fixed the wrong dependence in verify.
Remove redundant dependence from registerM7L1.
-------------------------------------------


1.59
-----------------
GR v15r24
Look up run start&stop times from ACQSUMMARY rather than relying on the
metadata supplied with the delivery. (LONE-76)
Make our own magic7 file for use with ft2Runs. (LONE-82)
Move deliveries to NFS when we're done with them.
Use different directory in buffers when in test mode.
The verify section is executed after mergeDigi.
Use prune tree merger for svac.
-------------------------------------------


1.58
-----------------
GR v15r21
Fix bug that caused LCI runs to not get finalized.
Use the same tree merger as recon, digi, & gcr for cal tuples.
-------------------------------------------


1.57
-----------------
GR v15r19 (appropriate jobOptions were added for digi).
New monitoring tags (bug fix in FastMon geomagnetic variables).
Attach MOOT key and alias as metadata when registering files.
Avoid the merging issue described in JIRA LONE-67.
Make run locking a little more verbose.
-------------------------------------------


1.56
-----------------
GR v15r13
Lots of new monitoring tags.
Use different aspLauncher for dev.
Use symbolic links to point to buffers.
Use flight geometry always.
Export to GSSC on prod.
-------------------------------------------


1.55
-----------------
GR v15r6p1.