@@ -2,6 +2,17 @@
 1.62
 -----------------
 Fixed the dependencies for copyM7Hp and registerM7Hp
+Don't use symlinks to buffers. [LONE-100@JIRA]
+Use a constant bigger number of smaller crumbs/chunk. [LONE-100@JIRA]
+Assign hosts to chunks in random order. [LONE-100@JIRA]
+Make chunkLists human-editable. [LONE-93@JIRA]
+Test for pathological chunks. [LONE-92@JIRA]
+Avoid core files in log directory from ingest jobs.
+Don't fail kludgeAsp if the stream has already been launched. [ASP-26@JIRA]
+Put runId[.chunkId] in target when logging missing files on
+merge. [LONE-94@JIRA]
+Trim a couple of staic values from registerPrep/registerStuff interface.
+Require 50GB free scratch for merging recon.
 -------------------------------------------
 
 
